# typemake

./: Cargo.toml
src/: cli.rs  error.rs  main.rs  typemake.rs  workflow.rs
src/interpreter/: mod.rs
src/interpreter/python/: mod.rs
src/parser/: mod.rs  tests.rs
src/workflow/: mod.rs
tests/: output_redirection.rs  run_empty.rs  run_python.rs
