[package]
name = "typemake"
description = "A workflow manager abstracting from files"
license = "MIT"
version = "0.1.0-alpha.0"
edition = "2018"

[features]
default = ["python"]
python = ["pyo3", "lazy_static"]

[dependencies]
nom = "7"
clap = "3.0.0-beta.4"
log = "0.4"
simplelog = "0.10"
thiserror = "1"
pyo3 = {version = "0.14", features = ["auto-initialize"], optional = true}
lazy_static = {version = "1", optional = true}
serde = "1"
traitgraph = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"